fixed countdown timer alignment

--- a/src/css/imports/typography.css
+++ b/src/css/imports/typography.css
@@ -66,7 +66,11 @@ h3 {
 
 .details__date {
   display: inline-block;
-  padding: 0 2.4rem;
+  padding: 0 2.4rem 0 0;
+}
+
+.details__date--last {
+  padding: 0;
 }
 
 .details__value {
